frontend/parser.cpp
#include "adt/basic.h"
#include "frontend/parser.h"

struct Keyword {
  char* strname;
  enum TokenClass token_class;
};

void Parser::define_keywords(Scope* scope)
{
  struct Keyword keywords[] = {
    {"action",  TokenClass::Action},
    {"actions", TokenClass::Actions},
    {"entries", TokenClass::Entries},
    {"enum",    TokenClass::Enum},
    {"in",      TokenClass::In},
    {"package", TokenClass::Package},
    {"select",  TokenClass::Select},
    {"switch",  TokenClass::Switch},
    {"tuple",   TokenClass::Tuple},
    {"control", TokenClass::Control},
    {"error",   TokenClass::Error},
    {"header",  TokenClass::Header},
    {"inout",   TokenClass::InOut},
    {"parser",  TokenClass::Parser},
    {"state",   TokenClass::State},
    {"table",   TokenClass::Table},
    {"key",     TokenClass::Key},
    {"typedef", TokenClass::Typedef},
    {"default", TokenClass::Default},
    {"extern",  TokenClass::Extern},
    {"out",     TokenClass::Out},
    {"else",    TokenClass::Else},
    {"exit",    TokenClass::Exit},
    {"if",      TokenClass::If},
    {"return",  TokenClass::Return},
    {"struct",  TokenClass::Struct},
    {"apply",   TokenClass::Apply},
    {"const",   TokenClass::Const},
    {"bool",    TokenClass::Bool},
    {"true",    TokenClass::True},
    {"false",   TokenClass::False},
    {"void",    TokenClass::Void},
    {"int",     TokenClass::Int},
    {"bit",     TokenClass::Bit},
    {"varbit",  TokenClass::Varbit},
    {"string",  TokenClass::String},
    {"match_kind",   TokenClass::MatchKind},
    {"transition",   TokenClass::Transition},
    {"header_union", TokenClass::Union},
  };

  for (int i = 0; i < sizeof(keywords) / sizeof(keywords[0]); i++) {
    NameDeclaration* name_decl = scope->bind_name(storage, keywords[i].strname, NameSpace::Keyword);
    name_decl->token_class = keywords[i].token_class;
  }
}

Token* Parser::next_token()
{
  assert(token_at < tokens->element_count);

  prev_token = token;
  prev_token_at = token_at;
  token = (Token*)tokens->get(++token_at);
  while (token->klass == TokenClass::Comment) {
    token = (Token*)tokens->get(++token_at);
  }
  if (token->klass == TokenClass::Identifier) {
    NameEntry* name_entry = current_scope->lookup(token->lexeme, NameSpace::Keyword | NameSpace::Type);
    NameDeclaration* name_decl = name_entry->get_declarations(NameSpace::Keyword);
    if (name_decl) {
      token->klass = name_decl->token_class;
      return token;
    }
    name_decl = name_entry->get_declarations(NameSpace::Type);
    if (name_decl) {
      token->klass = TokenClass::TypeIdentifier;
      return token;
    }
  }
  return token;
}

Token* Parser::peek_token()
{
  prev_token = token;
  prev_token_at = token_at;
  Token* peek_token = next_token();
  token = prev_token;
  token_at = prev_token_at;
  return peek_token;
}

static int operator_priority(Token* token)
{
  if (token->klass == TokenClass::DoubleAmpersand || token->klass == TokenClass::DoublePipe) {
    /* Logical AND, OR */
    return 1;
  } else if (token->klass == TokenClass::DoubleEqual || token->klass == TokenClass::ExclamationEqual
             || token->klass == TokenClass::AngleOpen /* < */ || token->klass == TokenClass::AngleClose /* > */
      || token->klass == TokenClass::AngleOpenEqual /* <= */ || token->klass == TokenClass::AngleCloseEqual /* >= */) {
    /* Relational ops  */
    return 2;
  }
  else if (token->klass == TokenClass::Plus || token->klass == TokenClass::Minus
           || token->klass == TokenClass::Ampersand || token->klass == TokenClass::Pipe
           || token->klass == TokenClass::Circumflex || token->klass == TokenClass::DoubleAngleOpen /* << */
           || token->klass == TokenClass::DoubleAngleClose /* >> */) {
    /* Addition and subtraction; bitwise ops */
    return 3;
  }
  else if (token->klass == TokenClass::Star || token->klass == TokenClass::Slash) {
    /* Multiplication and division */
    return 4;
  }
  else if (token->klass == TokenClass::TripleAmpersand) {
    /* Mask */
    return 5;
  }
  else assert(0);
  return 0;
}

enum AstOperator token_to_binop(Token* token)
{
  switch (token->klass) {
    case TokenClass::DoubleAmpersand:
      return AstOperator::And;
    case TokenClass::DoublePipe:
      return AstOperator::Or;
    case TokenClass::DoubleEqual:
      return AstOperator::Eq;
    case TokenClass::ExclamationEqual:
      return AstOperator::Neq;
    case TokenClass::AngleOpen:
      return AstOperator::Less;
    case TokenClass::AngleClose:
      return AstOperator::Great;
    case TokenClass::AngleOpenEqual:
      return AstOperator::LessEq;
    case TokenClass::AngleCloseEqual:
      return AstOperator::GreatEq;
    case TokenClass::Plus:
      return AstOperator::Add;
    case TokenClass::Minus:
      return AstOperator::Sub;
    case TokenClass::Star:
      return AstOperator::Mul;
    case TokenClass::Slash:
      return AstOperator::Div;
    case TokenClass::Ampersand:
      return AstOperator::BitwAnd;
    case TokenClass::Pipe:
      return AstOperator::BitwOr;
    case TokenClass::Circumflex:
      return AstOperator::BitwXor;
    case TokenClass::DoubleAngleOpen:
      return AstOperator::BitwShl;
    case TokenClass::DoubleAngleClose:
      return AstOperator::BitwShr;
    case TokenClass::TripleAmpersand:
      return AstOperator::Mask;
    default: return (AstOperator)0;
  }
}

Ast* Parser::parse()
{
  root_scope = Scope::allocate(storage, 5);
  current_scope = root_scope;

  define_keywords(root_scope);
  token_at = 0;
  token = (Token*)tokens->get(token_at);
  next_token();
  p4program = parse_p4program();
  assert(current_scope == root_scope);
  return p4program;
}

/** PROGRAM **/

Ast* Parser::parse_p4program()
{
  Ast* p4program = Ast_p4program::allocate(storage);
  p4program->line_no = token->line_no;
  p4program->column_no = token->column_no;
  while (token->klass == TokenClass::Semicolon) {
    next_token(); /* empty declaration */
  }
  Scope* scope = Scope::allocate(storage, 6);
  current_scope = scope->push(current_scope);
  p4program->p4program.decl_list = parse_declarationList();
  current_scope = current_scope->pop();
  if (token->klass != TokenClass::EndOfInput) {
    error("%s:%d:%d: error: unexpected token `%s`.",
          source_file, token->line_no, token->column_no, token->lexeme);
  }
  return p4program;
}

Ast* Parser::parse_declarationList()
{
  Ast* decls = Ast_declarationList::allocate(storage);
  decls->line_no = token->line_no;
  decls->column_no = token->column_no;
  if (token->is_declaration()) {
    Ast* ast = parse_declaration();
    TreeConstructor tree_ctor = {};
    tree_ctor.append_node(&decls->tree, &ast->tree);
    while (token->is_declaration() || token->klass == TokenClass::Semicolon) {
      if (token->is_declaration()) {
        ast = parse_declaration();
        tree_ctor.append_node(&decls->tree, &ast->tree);
      } else if (token->klass == TokenClass::Semicolon) {
        next_token(); /* empty declaration */
      }
    }
  }
  return decls;
}

Ast* Parser::parse_declaration()
{
  if (token->is_declaration()) {
    Ast* decl = Ast_declaration::allocate(storage);
    decl->line_no = token->line_no;
    decl->column_no = token->column_no;
    if (token->klass == TokenClass::Const) {
      decl->declaration.decl = parse_variableDeclaration(0);
      return decl;
    } else if (token->klass == TokenClass::Extern) {
      decl->declaration.decl = parse_externDeclaration();
      return decl;
    } else if (token->klass == TokenClass::Action) {
      decl->declaration.decl = parse_actionDeclaration();
      return decl;
    } else if (token->klass == TokenClass::Parser) {
      decl->declaration.decl = parse_typeDeclaration();
      if (token->klass == TokenClass::Semicolon) {
        next_token();
      } else {
        decl->declaration.decl = parse_parserDeclaration(decl->declaration.decl);
      }
      return decl;
    } else if (token->klass == TokenClass::Control) {
      decl->declaration.decl = parse_typeDeclaration();
      if (token->klass == TokenClass::Semicolon) {
        next_token();
      } else {
        decl->declaration.decl = parse_controlDeclaration(decl->declaration.decl);
      }
      return decl;
    } else if (token->is_typeDeclaration()) {
      decl->declaration.decl = parse_typeDeclaration();
      return decl;
    } else if (token->klass == TokenClass::Error) {
      decl->declaration.decl = parse_errorDeclaration();
      return decl;
    } else if (token->klass == TokenClass::MatchKind) {
      decl->declaration.decl = parse_matchKindDeclaration();
      return decl;
    } else if (token->is_typeRef()) {
      Ast* type_ref = parse_typeRef();
      if (token->klass == TokenClass::ParenthOpen) {
        decl->declaration.decl = parse_instantiation(type_ref);
        return decl;
      } else if (token->is_name()) {
        decl->declaration.decl = parse_functionDeclaration(type_ref);
        return decl;
      } else error("%s:%d:%d: error: unexpected token `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
      assert(0);
    } else if (token->is_typeOrVoid()) {
      decl->declaration.decl = parse_functionDeclaration(parse_typeRef());
      return decl;
    } else assert(0);
  } else error("%s:%d:%d: error: top-level declaration was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_nonTypeName()
{
  if (token->is_nonTypeName()) {
    Ast* name = Ast_name::allocate(storage);
    name->line_no = token->line_no;
    name->column_no = token->column_no;
    name->name.strname = token->lexeme;
    next_token();
    return name;
  } else error("%s:%d:%d: error: non-type name was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_name()
{
  if (token->is_name()) {
    if (token->is_nonTypeName()) {
      return parse_nonTypeName();
    } else if (token->klass == TokenClass::TypeIdentifier) {
      Ast* type_name = Ast_name::allocate(storage);
      type_name->line_no = token->line_no;
      type_name->column_no = token->column_no;
      type_name->name.strname = token->lexeme;
      next_token();
      return type_name;
    } else assert(0);
  } else error("%s:%d:%d: error: name was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_parameterList()
{
  Ast* params = Ast_parameterList::allocate(storage);
  params->line_no = token->line_no;
  params->column_no = token->column_no;
  if (token->is_parameter()) {
    Ast* ast = parse_parameter();
    TreeConstructor tree_ctor = {};
    tree_ctor.append_node(&params->tree, &ast->tree);
    while (token->klass == TokenClass::Comma) {
      next_token();
      ast = parse_parameter();
      tree_ctor.append_node(&params->tree, &ast->tree);
    }
  }
  return params;
}

Ast* Parser::parse_parameter()
{
  if (token->is_parameter()) {
    Ast* param = Ast_parameter::allocate(storage);
    param->line_no = token->line_no;
    param->column_no = token->column_no;
    param->parameter.direction = parse_direction();
    param->parameter.type = parse_typeRef();
    if (token->is_name()) {
      param->parameter.name = parse_name();
      if (token->klass == TokenClass::Equal) {
        next_token();
        if (token->is_expression()) {
          param->parameter.init_expr = parse_expression(1);
        } else error("%s:%d:%d: error: expression was expected, got `%s`.",
                     source_file, token->line_no, token->column_no, token->lexeme);
      }
    } else error("%s:%d:%d: error: name was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return param;
  } else error("%s:%d:%d: error: type was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

enum ParamDirection Parser::parse_direction()
{
  if (token->is_direction()) {
    if (token->klass == TokenClass::In) {
      next_token();
      return ParamDirection::In;
    } else if (token->klass == TokenClass::Out) {
      next_token();
      return ParamDirection::Out;
    } else if (token->klass == TokenClass::InOut) {
      next_token();
      return ParamDirection::In | ParamDirection::Out;
    } else assert(0);
  }
  return (ParamDirection)0;
}

Ast* Parser::parse_packageTypeDeclaration()
{
  if (token->klass == TokenClass::Package) {
    next_token();
    Ast* package_decl = Ast_packageTypeDeclaration::allocate(storage);
    package_decl->line_no = token->line_no;
    package_decl->column_no = token->column_no;
    if (token->is_name()) {
      Ast* name = parse_name();
      current_scope->bind_name(storage, name->name.strname, NameSpace::Type);
      package_decl->packageTypeDeclaration.name = name;
      if (token->klass == TokenClass::ParenthOpen) {
        next_token();
        package_decl->packageTypeDeclaration.params = parse_parameterList();
        if (token->klass == TokenClass::ParenthClose) {
          next_token();
        } else error("%s:%d:%d: error: `)` was expected, got `%s`.",
                     source_file, token->line_no, token->column_no, token->lexeme);
      } else error("%s:%d:%d: error: `(` was expected, got `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
    } else error("%s:%d:%d: error: name was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return package_decl;
  } else error("%s:%d:%d: error: `package` was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_instantiation(Ast* type_ref)
{
  if (token->is_typeRef() || type_ref) {
    Ast* inst_stmt = Ast_instantiation::allocate(storage);
    inst_stmt->line_no = token->line_no;
    inst_stmt->column_no = token->column_no;
    inst_stmt->instantiation.type = type_ref ? type_ref : parse_typeRef();
    if (token->klass == TokenClass::ParenthOpen) {
      next_token();
      inst_stmt->instantiation.args = parse_argumentList();
      if (token->klass == TokenClass::ParenthClose) {
        next_token();
        if (token->is_name()) {
          inst_stmt->instantiation.name = parse_name();
          if (token->klass == TokenClass::Semicolon) {
            next_token();
          } else error("%s:%d:%d: error: `;` was expected, got `%s`.",
                       source_file, token->line_no, token->column_no, token->lexeme);
        } else error("%s:%d:%d: error: instance name was expected, got `%s`.",
                     source_file, token->line_no, token->column_no, token->lexeme);
      } else error("%s:%d:%d: error: `)` was expected, got `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
    } else error("%s:%d:%d: error: `(` was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return inst_stmt;
  } else error("%s:%d:%d: error: type was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

/** PARSER **/

Ast* Parser::parse_constructorParameters()
{
  if (token->klass == TokenClass::ParenthOpen) {
    next_token();
    Ast* params = parse_parameterList();
    if (token->klass == TokenClass::ParenthClose) {
      next_token();
    } else error("%s:%d:%d: error: `)` was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return params;
  } else error("%s:%d:%d: error: `(` was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  return 0;
}

Ast* Parser::parse_parserDeclaration(Ast* parser_proto)
{
  if (token->klass == TokenClass::ParenthOpen || token->klass == TokenClass::BraceOpen) {
    Ast* parser_decl = Ast_parserDeclaration::allocate(storage);
    parser_decl->line_no = token->line_no;
    parser_decl->column_no = token->column_no;
    parser_decl->parserDeclaration.proto = parser_proto;
    parser_decl->parserDeclaration.ctor_params = parse_constructorParameters();
    if (token->klass == TokenClass::BraceOpen) {
      next_token();
      parser_decl->parserDeclaration.local_elements = parse_parserLocalElements();
      if (token->klass == TokenClass::State) {
        parser_decl->parserDeclaration.states = parse_parserStates();
      } else error("%s:%d:%d: error: `state` was expected, got `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
      if (token->klass == TokenClass::BraceClose) {
        next_token();
      } else error("%s:%d:%d: error: `}` was expected, got `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
    } else error("%s:%d:%d: error: `{` was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return parser_decl;
  } else error("%s:%d:%d: error: `parser` was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_parserLocalElements()
{
  Ast* elems = Ast_parserLocalElements::allocate(storage);
  elems->line_no = token->line_no;
  elems->column_no = token->column_no;
  if (token->is_parserLocalElement()) {
    Ast* ast = parse_parserLocalElement();
    TreeConstructor tree_ctor = {};
    tree_ctor.append_node(&elems->tree, &ast->tree);
    while (token->is_parserLocalElement()) {
      ast = parse_parserLocalElement();
      tree_ctor.append_node(&elems->tree, &ast->tree);
    }
  }
  return elems;
}

Ast* Parser::parse_parserLocalElement()
{
  if (token->is_parserLocalElement()) {
    Ast* local_element = Ast_parserLocalElement::allocate(storage);
    local_element->line_no = token->line_no;
    local_element->column_no = token->column_no;
    if (token->klass == TokenClass::Const) {
      local_element->parserLocalElement.element = parse_variableDeclaration(0);
      return local_element;
    } else if (token->is_typeRef()) {
      Ast* type_ref = parse_typeRef();
      if (token->klass == TokenClass::ParenthOpen) {
        local_element->parserLocalElement.element = parse_instantiation(type_ref);
        return local_element;
      } else if (token->is_name()) {
        local_element->parserLocalElement.element = parse_variableDeclaration(type_ref);
        return local_element;
      } else error("%s:%d:%d: error: unexpected token `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
    } else assert(0);
  } else error("%s:%d:%d: error: local declaration was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_parserTypeDeclaration()
{
  if (token->klass == TokenClass::Parser) {
    next_token();
    Ast* parser_proto = Ast_parserTypeDeclaration::allocate(storage);
    parser_proto->line_no = token->line_no;
    parser_proto->column_no = token->column_no;
    Ast* method_protos = Ast_methodPrototypes::allocate(storage);
    method_protos->line_no = parser_proto->line_no;
    method_protos->column_no = parser_proto->column_no;
    parser_proto->parserTypeDeclaration.method_protos = method_protos;
    if (token->is_name()) {
      Ast* name = parse_name();
      current_scope->bind_name(storage, name->name.strname, NameSpace::Type);
      parser_proto->parserTypeDeclaration.name = name;
      if (token->klass == TokenClass::ParenthOpen) {
        next_token();
        parser_proto->parserTypeDeclaration.params = parse_parameterList();
        if (token->klass == TokenClass::ParenthClose) {
          next_token();
        } else error("%s:%d:%d: error: `)` was expected, got `%s`.",
                     source_file, token->line_no, token->column_no, token->lexeme);
      } else error("%s:%d:%d: error: `(` was expected, got `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
    } else error("%s:%d:%d: error: name was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return parser_proto;
  } else error("%s:%d:%d: error: `parser` was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_parserStates()
{
  Ast* states = Ast_parserStates::allocate(storage);
  states->line_no = token->line_no;
  states->column_no = token->column_no;
  if (token->klass == TokenClass::State) {
    Ast* ast = parse_parserState();
    TreeConstructor tree_ctor = {};
    tree_ctor.append_node(&states->tree, &ast->tree);
    while (token->klass == TokenClass::State) {
      ast = parse_parserState();
      tree_ctor.append_node(&states->tree, &ast->tree);
    }
  }
  return states;
}

Ast* Parser::parse_parserState()
{
  if (token->klass == TokenClass::State) {
    next_token();
    Ast* state = Ast_parserState::allocate(storage);
    state->line_no = token->line_no;
    state->column_no = token->column_no;
    state->parserState.name = parse_name();
    if (token->klass == TokenClass::BraceOpen) {
      next_token();
      state->parserState.stmt_list = parse_parserStatements();
      state->parserState.transition_stmt = parse_transitionStatement();
      if (token->klass == TokenClass::BraceClose) {
        next_token();
      } else error("%s:%d:%d: error: `}` was expected, got `%s`.",
                   source_file, token->line_no, token->column_no, token->lexeme);
    } else error("%s:%d:%d: error: `{` was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return state;
  } else error("%s:%d:%d: error: `state` was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_parserStatements()
{
  Ast* stmts = Ast_parserStatements::allocate(storage);
  stmts->line_no = token->line_no;
  stmts->column_no = token->column_no;
  if (token->is_parserStatement()) {
    Ast* ast = parse_parserStatement();
    TreeConstructor tree_ctor = {};
    tree_ctor.append_node(&stmts->tree, &ast->tree);
    while (token->is_parserStatement()) {
      ast = parse_parserStatement();
      tree_ctor.append_node(&stmts->tree, &ast->tree);
    }
  }
  return stmts;
}

Ast* Parser::parse_parserStatement()
{
  if (token->is_parserStatement()) {
    Ast* parser_stmt = Ast_parserStatement::allocate(storage);
    parser_stmt->line_no = token->line_no;
    parser_stmt->column_no = token->column_no;
    if (token->is_typeRef()) {
      Ast* type_ref = parse_typeRef();
      if (token->is_name()) {
        parser_stmt->parserStatement.stmt = parse_variableDeclaration(type_ref);
        return parser_stmt;
      } else {
        parser_stmt->parserStatement.stmt = parse_directApplication(type_ref);
        return parser_stmt;
      }
    } else if (token->is_assignmentOrMethodCallStatement()) {
      parser_stmt->parserStatement.stmt = parse_assignmentOrMethodCallStatement();
      return parser_stmt;
    } else if (token->klass == TokenClass::BraceOpen) {
      parser_stmt->parserStatement.stmt = parse_parserBlockStatement();
      return parser_stmt;
    } else if (token->klass == TokenClass::Const) {
      parser_stmt->parserStatement.stmt = parse_variableDeclaration(0);
      return parser_stmt;
    } else if (token->klass == TokenClass::Semicolon) {
      Ast* stmt = Ast_emptyStatement::allocate(storage);
      stmt->line_no = token->line_no;
      stmt->column_no = token->column_no;
      parser_stmt->parserStatement.stmt = stmt;
      next_token();
      return parser_stmt;
    } else assert(0);
  } else error("%s:%d:%d: error: statement was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}

Ast* Parser::parse_parserBlockStatement()
{
  if (token->klass == TokenClass::BraceOpen) {
    next_token();
    Ast* stmt = Ast_parserBlockStatement::allocate(storage);
    stmt->line_no = token->line_no;
    stmt->column_no = token->column_no;
    stmt->parserBlockStatement.stmt_list = parse_parserStatements();
    if (token->klass == TokenClass::BraceClose) {
      next_token();
    } else error("%s:%d:%d: error: `}` was expected, got `%s`.",
                 source_file, token->line_no, token->column_no, token->lexeme);
    return stmt;
  } else error("%s:%d:%d: error: `{` was expected, got `%s`.",
               source_file, token->line_no, token->column_no, token->lexeme);
  assert(0);
  return 0;
}
